--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<li class="hover:text-[#FCB623]"><a href="#">Team</a></li>
 					<li
 						class="px-[50px] py-[21px] border border-[#FCB623] text-[#FCB623] rounded-full font-semibold text-[24px] w-fit">
-						<a href="#">Contact</a>
+						<a href="#contact_us">Contact</a>
 					</li>
 				</ul>
 				<div class="flex items-center gap-6 mt-[144px]">
